==> casebeer/esp32-si5351/src/si5351.cpp <==
#include "si5351.h"
#include "esphome.h"
#define SI5351_ADDRESS 0x60
#define I2C_FREQUENCY 100000U

void si5351_Init(int32_t correction, uint8_t i2c_sda, uint8_t i2c_scl) {
    si5351Correction = correction;

    // Start i2c comms
    //if(i2c_sda == 0 && i2c_scl == 0) {
        // using standard ESP32 I2C pins (SDA: 21, SCL: 22)
        Wire.begin();
//    }
//    else {
//        Wire.begin(i2c_sda, i2c_scl, I2C_FREQUENCY);
//    }

    // Disable all outputs by setting CLKx_DIS high
    si5351_write(SI5351_REGISTER_3_OUTPUT_ENABLE_CONTROL, 0xFF);

    // Power down all output drivers
    si5351_write(SI5351_REGISTER_16_CLK0_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_17_CLK1_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_18_CLK2_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_19_CLK3_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_20_CLK4_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_21_CLK5_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_22_CLK6_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_23_CLK7_CONTROL, 0x80);

    // Set the load capacitance for the XTAL
    si5351CrystalLoad_t crystalLoad = SI5351_CRYSTAL_LOAD_10PF;
    si5351_write(SI5351_REGISTER_183_CRYSTAL_INTERNAL_LOAD_CAPACITANCE, crystalLoad);
}

void si5351_Init(int32_t correction) {
    si5351_Init(correction, 0, 0);
}

void si5351_SetupCLK0(int32_t Fclk, si5351DriveStrength_t driveStrength) {
	si5351PLLConfig_t pll_conf;
	si5351OutputConfig_t out_conf;

	si5351_Calc(Fclk, &pll_conf, &out_conf);
	si5351_SetupPLL(SI5351_PLL_A, &pll_conf);
	si5351_SetupOutput(0, SI5351_PLL_A, driveStrength, &out_conf, 0);
}

void si5351_SetupCLK2(int32_t Fclk, si5351DriveStrength_t driveStrength) {
	si5351PLLConfig_t pll_conf;
	si5351OutputConfig_t out_conf;

	si5351_Calc(Fclk, &pll_conf, &out_conf);
	si5351_SetupPLL(SI5351_PLL_B, &pll_conf);
	si5351_SetupOutput(2, SI5351_PLL_B, driveStrength, &out_conf, 0);
}

uint8_t si5351_write(uint8_t reg, uint8_t data)
{
    Wire.beginTransmission(SI5351_ADDRESS);

    Wire.write(reg); // register address
    Wire.write(data);

    uint8_t error = Wire.endTransmission(true);

    // success
    if(error == 0)
    {
        return 0;
    }

    return 1;
}
