==> RomanSereda/esp32s3-si5351-adf4113-ctrl/main/si5351.c <==
#include "si5351.h"
#include "driver/i2c.h"
#define I2C_MASTER_NUM              0
#define I2C_MASTER_TIMEOUT_MS       1000
#define SI5351_ADDRESS 0x60
#define I2C_FREQUENCY 100000U
#define I2C_MASTER_TX_BUF_DISABLE   0                          /*!< I2C master doesn't need buffer */
#define I2C_MASTER_RX_BUF_DISABLE   0                          /*!< I2C master doesn't need buffer */

void si5351_init(int32_t correction) {
    si5351Correction = correction;

    int i2c_master_port = I2C_MASTER_NUM;

    i2c_config_t conf = {
        .mode = I2C_MODE_MASTER,
        .sda_io_num = 16,
        .scl_io_num = 18,
        .sda_pullup_en = GPIO_PULLUP_ENABLE,
        .scl_pullup_en = GPIO_PULLUP_ENABLE,
        .master.clk_speed = I2C_FREQUENCY,
    };

    i2c_param_config(i2c_master_port, &conf);

    i2c_driver_install(i2c_master_port, conf.mode, I2C_MASTER_RX_BUF_DISABLE, I2C_MASTER_TX_BUF_DISABLE, 0);

    // Disable all outputs by setting CLKx_DIS high
    si5351_write(SI5351_REGISTER_3_OUTPUT_ENABLE_CONTROL, 0xFF);

    // Power down all output drivers
    si5351_write(SI5351_REGISTER_16_CLK0_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_17_CLK1_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_18_CLK2_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_19_CLK3_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_20_CLK4_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_21_CLK5_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_22_CLK6_CONTROL, 0x80);
    si5351_write(SI5351_REGISTER_23_CLK7_CONTROL, 0x80);

    // Set the load capacitance for the XTAL
    si5351CrystalLoad_t crystalLoad = SI5351_CRYSTAL_LOAD_10PF;
    si5351_write(SI5351_REGISTER_183_CRYSTAL_INTERNAL_LOAD_CAPACITANCE, crystalLoad);
}

void si5351_setupClk0(int32_t Fclk, si5351DriveStrength_t driveStrength) {
	si5351PLLConfig_t pll_conf;
	si5351OutputConfig_t out_conf;

	si5351_calc(Fclk, &pll_conf, &out_conf);
	si5351_setupPll(SI5351_PLL_A, &pll_conf);
	si5351_setupOutput(0, SI5351_PLL_A, driveStrength, &out_conf, 0);
}

void si5351_setupClk2(int32_t Fclk, si5351DriveStrength_t driveStrength) {
	si5351PLLConfig_t pll_conf;
	si5351OutputConfig_t out_conf;

	si5351_calc(Fclk, &pll_conf, &out_conf);
	si5351_setupPll(SI5351_PLL_B, &pll_conf);
	si5351_setupOutput(2, SI5351_PLL_B, driveStrength, &out_conf, 0);
}

uint8_t si5351_write(uint8_t reg, uint8_t data)
{
    int ret;
    uint8_t write_buf[2] = {reg, data};

    ret = i2c_master_write_to_device(I2C_MASTER_NUM, SI5351_ADDRESS, write_buf, sizeof(write_buf), I2C_MASTER_TIMEOUT_MS / portTICK_PERIOD_MS);

    return ret;
}
